# file_trans_system

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  README_KR.md  tsan_suppressions.txt
.github/patches/: network_system-logger-interface-fix.patch  network_system-messaging-client-stop-cleanup.patch  network_system-session-cleanup-order.patch
.github/workflows/: benchmark.yml  ci.yml  coverage.yml  sanitizers.yml
benchmarks/: CMakeLists.txt  README.md
benchmarks/compression/: bench_lz4_compression.cpp
benchmarks/encryption/: bench_encryption_throughput.cpp  bench_key_derivation.cpp
benchmarks/latency/: bench_latency.cpp
benchmarks/memory/: bench_memory_usage.cpp
benchmarks/scalability/: bench_scalability.cpp
benchmarks/throughput/: bench_chunk_operations.cpp  bench_single_file_throughput.cpp
benchmarks/transport/: bench_quic_transport.cpp  bench_tcp_vs_quic_comparison.cpp
benchmarks/utils/: benchmark_helpers.cpp  benchmark_helpers.h
cmake/: FileTransDependencies.cmake  FileTransInstall.cmake  FileTransSystemConfig.cmake.in
docs/: PRD.md  PRD_KR.md  SDS.md  SDS_KR.md  SRS.md  SRS_KR.md  Validation.md  Validation_KR.md  Verification.md  Verification_KR.md  architecture.md  architecture_KR.md  getting-started.md  getting-started_KR.md  sequence-diagrams.md  sequence-diagrams_KR.md
docs/cloud/: AWS_S3_SETUP.md  AZURE_BLOB_SETUP.md  CLOUD_INFRASTRUCTURE.md  CLOUD_STORAGE_SERVER.md  GCS_SETUP.md
docs/reference/: README.md  README_KR.md  api-reference.md  api-reference_KR.md  bandwidth-throttling.md  cloud-best-practices.md  cloud-quick-start.md  cloud-storage-layer.md  configuration.md  configuration_KR.md  dependencies.md  dependencies_KR.md  encryption-layer.md  error-codes.md  error-codes_KR.md  logging.md  lz4-compression.md  lz4-compression_KR.md  pipeline-architecture.md  pipeline-architecture_KR.md  protocol-spec.md  protocol-spec_KR.md  quick-reference.md  quick-reference_KR.md  transport-layer.md
examples/: CMakeLists.txt  README.md  auto_reconnect.cpp  bandwidth_throttling.cpp  batch_download_example.cpp  batch_upload_example.cpp  custom_pipeline.cpp  download_example.cpp  quota_management.cpp  resume_transfer.cpp  server_callbacks.cpp  simple_client.cpp  simple_server.cpp  upload_example.cpp
examples/cloud/: azure_blob_example.cpp  gcs_example.cpp  hybrid_storage_example.cpp  large_file_transfer_example.cpp  multi_cloud_failover_example.cpp  s3_example.cpp
include/kcenon/file_transfer/: file_transfer.h
include/kcenon/file_transfer/adapters/: logger_adapter.h  monitorable_adapter.h  monitoring_adapter.h  thread_pool_adapter.h
include/kcenon/file_transfer/client/: client_types.h  file_transfer_client.h
include/kcenon/file_transfer/cloud/: azure_blob_storage.h  cloud_config.h  cloud_credentials.h  cloud_error.h  cloud_http_client.h  cloud_storage_interface.h  cloud_stream_base.h  cloud_utils.h  gcs_storage.h  s3_storage.h
include/kcenon/file_transfer/config/: feature_flags.h
include/kcenon/file_transfer/core/: bandwidth_limiter.h  checksum.h  chunk_assembler.h  chunk_config.h  chunk_splitter.h  chunk_types.h  compression_engine.h  error_codes.h  logging.h  protocol_types.h  resume_handler.h  statistics_collector.h  transfer_types.h  types.h
include/kcenon/file_transfer/encryption/: aes_gcm_engine.h  encryption_config.h  encryption_interface.h  key_derivation.h  key_manager.h
include/kcenon/file_transfer/server/: file_transfer_server.h  pipeline_jobs.h  quota_manager.h  server_pipeline.h  server_types.h  storage_manager.h  storage_policy.h
include/kcenon/file_transfer/transport/: connection_migration.h  quic_transport.h  session_resumption.h  tcp_transport.h  transport_config.h  transport_interface.h
src/: file_transfer.cpp
src/adapters/: logger_adapter.cpp  monitorable_adapter.cpp  monitoring_adapter.cpp  thread_pool_adapter.cpp
src/client/: file_transfer_client.cpp
src/cloud/: azure_blob_storage.cpp  cloud_http_client.cpp  cloud_utils.cpp  gcs_storage.cpp  s3_storage.cpp
src/core/: bandwidth_limiter.cpp  checksum.cpp  chunk_assembler.cpp  chunk_splitter.cpp  compression_engine.cpp  resume_handler.cpp  statistics_collector.cpp  transfer_id.cpp
src/encryption/: aes_gcm_engine.cpp  key_manager.cpp
src/server/: file_transfer_server.cpp  pipeline_jobs.cpp  quota_manager.cpp  server_pipeline.cpp  storage_manager.cpp  storage_policy.cpp
src/transport/: connection_migration.cpp  quic_transport.cpp  session_resumption.cpp  tcp_transport.cpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  test_basic_scenarios.cpp  test_concurrency.cpp  test_encrypted_transfer.cpp  test_error_advanced_scenarios.cpp  test_fixtures.h
tests/integration/cloud/: test_s3_integration.cpp
tests/unit/: test_version.cpp
tests/unit/client/: test_batch_transfer.cpp  test_transfer_control.cpp
tests/unit/cloud/: test_azure_blob_storage.cpp  test_cloud_interface.cpp  test_gcs_storage.cpp  test_s3_storage.cpp
tests/unit/compression/: test_compression_engine.cpp
tests/unit/core/: test_bandwidth_limiter.cpp  test_checksum.cpp  test_chunk_assembler.cpp  test_chunk_splitter.cpp  test_core_types.cpp  test_logging.cpp  test_resume_handler.cpp
tests/unit/encryption/: test_aes_gcm_engine.cpp  test_encryption_interface.cpp  test_key_manager.cpp  test_nist_vectors.cpp
tests/unit/protocol/: test_types.cpp
tests/unit/server/: test_pipeline_jobs.cpp  test_quota_manager.cpp  test_server_pipeline.cpp  test_storage_manager.cpp  test_storage_policy.cpp
tests/unit/state/: test_state_management.cpp
tests/unit/transport/: quic_transport_test.cpp  test_connection_migration.cpp  test_session_resumption.cpp  test_transport_interface.cpp
